<resources>
    <string name="app_name">CALCULATOR</string>
    <string name="number">Number</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="answer">ANSWER</string>
    <string name="power">^</string>
    <string name="clear">CLEAR</string>
    <string name="use_answer">Use Answer</string>
</resources>